--- a/default.conf
+++ b/default.conf
@@ -10,7 +10,7 @@ server {
 
     # Proxy requests to /api to the FastAPI backend
     location /api/ {
-        proxy_pass http://marker-api:8000/;
+        proxy_pass http://api:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
