--- a/default.conf
+++ b/default.conf
@@ -9,11 +9,15 @@ server {
     }
 
     # Proxy requests to /api to the FastAPI backend
-    location /api/ {
-        proxy_pass http://api:8000/;
+    location /api {
+        proxy_pass http://marker-api:8000;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
+        proxy_buffering off;
+        proxy_read_timeout 3600s;
+        proxy_send_timeout 3600s;
     }
 }
