--- a/default.conf
+++ b/default.conf
@@ -9,8 +9,8 @@ server {
     }
 
     # Proxy requests to /api to the FastAPI backend
-    location /api {
-        proxy_pass http://marker-api:8000;
+    location /api/ {
+        proxy_pass http://marker-api:8000/;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
