--- a/default.conf
+++ b/default.conf
@@ -19,5 +19,7 @@ server {
         proxy_buffering off;
         proxy_read_timeout 3600s;
         proxy_send_timeout 3600s;
+        client_max_body_size 500m;
+        client_body_buffer_size 250m;
     }
 }
